fixed minor bug with drag bar overlaping axis's

--- a/app_layout/css/scatterplot.css
+++ b/app_layout/css/scatterplot.css
@@ -21,7 +21,7 @@ text.axisLabel
 .axis path
 {
 	fill: white;
-	stroke: black;
+	fill-opacity: 0;
 	stroke-width: 2;
 	pointer-events: none;
 }
